fix annual rate of return for companies + improve layout for index comparison

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -37,10 +37,6 @@
                 - @company_summary.each do |year, data|
                   %td= year
               %tr
-                %td= "EOY price"
-                - @company_summary.each do |year, data|
-                  %td= number_to_currency(data[:end_price], precision: 2)
-              %tr
                 %td= raw @company.name
                 - @company_summary.each do |year, data|
                   - ror = data["annual_rate_of_return_1y"]
@@ -50,6 +46,10 @@
                     %td= ""
                   - else
                     %td(class="#{compare_with_index(ror, dow_ror, sp500_ror)}")= number_to_percentage(ror.to_f, precision: 2)
+              %tr
+                %td= "^ EOY price"
+                - @company_summary.each do |year, data|
+                  %td= number_to_currency(data[:end_price], precision: 2)
               - [[@sp500, "S&P500"], [@dow, "Dow Jones"]].each do |index, name|
                 %tr
                   %td= raw name
@@ -59,6 +59,10 @@
                       %td= ""
                     - else
                       %td= number_to_percentage(ror.to_f, precision: 2)
+                %tr
+                  %td= "^ EOY price"
+                  - index.each do |year, data|
+                    %td= number_to_currency(data[:end_price], precision: 2)
 
 .row.kfi
   .col-md-12
